<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="in.zollet.abhilash.retrofitlibrary.MainActivity">
    <item
        android:id="@+id/action_get"
        android:orderInCategory="10"
        android:title="@string/action_get"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_post"
        android:orderInCategory="20"
        android:title="@string/action_post"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_put"
        android:orderInCategory="30"
        android:title="@string/action_put"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="40"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_post_with_file"
        android:orderInCategory="50"
        android:title="@string/action_post_with_file"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_nested_api_call"
        android:orderInCategory="60"
        android:title="@string/action_nested_api_call"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_multiple_api_call"
        android:orderInCategory="70"
        android:title="@string/action_multiple_api_call"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_retrofit_tag"
        android:orderInCategory="80"
        android:title="@string/action_retrofit_tag"
        app:showAsAction="never"/>

</menu>
